
    * The smart protocol client is slightly faster, because it now only queries
      the server for the protocol version once per connection.  Also, the HTTP
      transport will now automatically probe for and use a smart server if
      one is present.  You can use the new ``nosmart+`` transport decorator
      to get the old behaviour.  (Andrew Bennetts)

     * Various operations with revision specs and commands that calculate
       revnos and revision ids are faster.  (John A. Meinel, Aaron Bentley)

  BUGFIXES:

    * Add ``root_client_path`` parameter to SmartWSGIApp and
      SmartServerRequest.  This makes it possible to publish filesystem
      locations that don't exactly match URL paths. SmartServerRequest
      subclasses should use the new ``translate_client_path`` and
      ``transport_from_client_path`` methods when dealing with paths received
      from a client to take this into account.  (Andrew Bennetts, #124089)

    * ``bzr mv a b`` can be now used also to rename previously renamed
      directories, not only files. (Lukáš Lalinský, #107967)

    * ``bzr uncommit --local`` can now remove revisions from the local
      branch to be symmetric with ``bzr commit --local``.
      (John Arbash Meinel, #93412)

    * Don't ask for a password if there is no real terminal.
      (Alexander Belchenko, #69851)

    * Fix a bug causing a ValueError crash in ``parse_line_delta_iter`` when
      fetching revisions from a knit to pack repository or vice versa using
      bzr:// (including over http or ssh).
      (#208418, Andrew Bennetts, Martin Pool, Robert Collins)

    * Implement handling of basename parameter for DefaultMail.  (James Westby)

    * Launchpad locations (lp: URLs) can be pulled.  (Aaron Bentley, #181945)

    * Merges that add files to deleted root directories complete.  They
      do create conflicts.  (Aaron Bentley, #210092)

    * vsftp's return ``550 RNFR command failed.`` supported.
      (Marcus Trautwig, #129786)
